5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1590_2894.log
== TEST (2019-03-20 15:04:12) 
-- CODE:
var = int(input("numero de jogos")
-- ERROR:
File "XXXX", line 2
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:04:27) 
-- CODE:
var = int(input("numero de jogos"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:04:56) 
-- CODE:
var = int(input("numero de jogos"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:05:22) 
-- CODE:
var = int(input("numero de jogos"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:09:58) 
-- CODE:
var = input("numero de jogos")
print("voce digitou" , var)

-- OUTPUT:
voce digitou 1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:10:26) 
-- CODE:
var = input("numero de jogos")
print("voce digitou" , var)

-- OUTPUT:
voce digitou 1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:12:55) 
-- CODE:
var = input("preco de jogos")


-- OUTPUT:
voce digitou 1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:19:35) 
-- CODE:
var = input("preco de jogos")

preco1 = 10
preco2 = 5
preco3 = 2
preco4 = 45
preco5 = 12
preco6 = 16
preco7 = 150
preco8 = 14
frete = 45

total = preco1 + preco2 + preco3 + preco4 + preco5 + preco6 + preco7 + preco8 + frete
print(total)


-- OUTPUT:
299
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:21:47) 
-- CODE:
var = float(input("preco de jogos"))

preco1 = 10
preco2 = 5
preco3 = 2
preco4 = 45
preco5 = 12
preco6 = 16
preco7 = 150
preco8 = 14
frete = 45

total = preco1 + preco2 + preco3 + preco4 + preco5 + preco6 + preco7 + preco8 + frete
print("total")


-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:25:23) 
-- CODE:
var = float(input("preco de jogos"))

total = (var * 8) + 45

print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:25:41) 
-- CODE:
var = float(input("preco de jogos"))

total = (var * 8) + 45

print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:27:02) 
-- CODE:
var = float(input("Qual o valor unitario dos jogos?"))

total = (var * 8) + 45

print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:27:29) 
-- CODE:
var = float(input("Qual o valor unitario dos jogos?:"))

total = (var * 8) + 45

print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:27:39) 
-- CODE:
var = float(input("Qual o valor unitario dos jogos?:"))

total = (var * 8) + 45

print(total)
-- EXECUTION TIME:
0.150199
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
